* Tue Jun 25 2002 Anil Kumar <aksaharan@yahoo.com>
- Added Memory Tracing Functions to check if there is any unreleased Memory.

* Sat Apr 07 2002 Anil Kumar <aksaharan@yahoo.com>
- Added #ifdef conditions to include extern "C" linkage directive in the header files.
- Corrected Makefile.am for Headers Directory.

* Sun Mar 24 2002 Anil Kumar <aksaharan@yahoo.com>
- Added interface for automated run test. It generates HTML file.

* Sun Feb 03 2002 Anil Kumar <aksaharan@yahoo.com>
- Made modifications for moving RPM Creation in the root directory.
- Cleaned up configure.in for Checks not required and added some additonal
  header and library checks.
- Made separate options for gzip, tar, zip and rpm creation in root directory. 
- Fixed Workspace file for Windows Build.

* Sun Dec 23 2001 Anil Kumar <aksaharan@yahoo.com>
- Made modifications for change in Directory Structure and Linking Options.
- Included GPL Headers in all the files. 

* Sun Nov 25 2001 Anil Kumar <aksaharan@yahoo.com>
- Added Curses based interface to the Package.
- Modified some options for the Console Based Interface.

* Sun Oct 28 2001 Anil Kumar <aksaharan@yahoo.com>
- Integrated RPM creation in the package configuration. 

* Sun Oct 21 2001 Anil Kumar <aksaharan@yahoo.com>
- Added a few Error Codes and respective description.
- Added code for handling duplicate group/test name. 