@@ -1,7 +1,7 @@
 Summary: A unit testing framework for 'C'
 Name: CUnit
 Version : 1.0
-Release: 6B
+Release: 7
 Epoch: 1
 Source: http://www.sourceforge.net/projects/cunit
 Group: Development/Tools
@@ -58,12 +58,16 @@ make install
 %{_prefix}/man/man8/CUnit.8
 
 ########## Share information and Example Files 
-%{_prefix}/share/CUnit-1.0-6B/Example/Automated/README
-%{_prefix}/share/CUnit-1.0-6B/Example/Automated/AutomatedTest
-%{_prefix}/share/CUnit-1.0-6B/Example/Console/README
-%{_prefix}/share/CUnit-1.0-6B/Example/Console/ConsoleTest
-%{_prefix}/share/CUnit-1.0-6B/Example/Curses/README
-%{_prefix}/share/CUnit-1.0-6B/Example/Curses/CursesTest
+%{_prefix}/share/CUnit-1.0-7/Example/Automated/README
+%{_prefix}/share/CUnit-1.0-7/Example/Automated/AutomatedTest
+%{_prefix}/share/CUnit-1.0-7/Example/Console/README
+%{_prefix}/share/CUnit-1.0-7/Example/Console/ConsoleTest
+%{_prefix}/share/CUnit-1.0-7/Example/Curses/README
+%{_prefix}/share/CUnit-1.0-7/Example/Curses/CursesTest
+%{_prefix}/share/CUnit/CUnit-List.dtd
+%{_prefix}/share/CUnit/CUnit-List.xsl
+%{_prefix}/share/CUnit/CUnit-Run.dtd
+%{_prefix}/share/CUnit/CUnit-Run.xsl
 
 # Add the change log in ChangeLog file located under source home directory.
 # The same file is inturn used internally to populate the change log for the RPM
